// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests create a supplier 1`] = `
Object {
  "data": Object {
    "createSupplier": Object {
      "address": Object {
        "building_name": "002",
        "city": "Celadon",
        "id": "A2",
        "state": "Johto",
        "street": "Elmer",
        "zip_code": "123",
      },
      "contactNumber": "1234567",
      "contactPerson": "Basil Valdez",
      "id": "1",
      "supplierName": "Juan Dela Cruz",
      "supplierNo": "001",
      "tin": "12345",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Tests delete a supplier 1`] = `
Object {
  "data": Object {
    "deleteSupplier": null,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Tests should error when no supplier 1`] = `
Object {
  "data": undefined,
  "errors": Array [
    [ValidationError: Cannot query field "supplier" on type "Supplier". Did you mean "supplierNo" or "supplierName"?],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Tests should fetch all suppliers 1`] = `
Object {
  "data": Object {
    "allSuppliers": Array [
      Object {
        "address": Object {
          "building_name": "002",
          "city": "Celadon",
          "id": "A2",
          "state": "Johto",
          "street": "Elmer",
          "zip_code": "123",
        },
        "contactNumber": "1234567",
        "contactPerson": "Basil Valdez",
        "id": "1",
        "supplierName": "Juan Dela Cruz",
        "supplierNo": "001",
        "tin": "12345",
      },
      Object {
        "address": Object {
          "building_name": "002",
          "city": "Celadon",
          "id": "A1",
          "state": "Johto",
          "street": "Elmer",
          "zip_code": "123",
        },
        "contactNumber": "1234567",
        "contactPerson": "Basil Valdez",
        "id": "2",
        "supplierName": "Juan Dela Cruz",
        "supplierNo": "002",
        "tin": "12345",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Tests should fetch one supplier 1`] = `
Object {
  "data": Object {
    "supplier": Object {
      "address": Object {
        "building_name": "002",
        "city": "Celadon",
        "id": "A2",
        "state": "Johto",
        "street": "Elmer",
        "zip_code": "123",
      },
      "contactNumber": "1234567",
      "contactPerson": "Basil Valdez",
      "id": "1",
      "supplierName": "Juan Dela Cruz",
      "supplierNo": "001",
      "tin": "12345",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Tests update a supplier 1`] = `
Object {
  "data": Object {
    "updateSupplier": Object {
      "contactNumber": "1234567",
      "contactPerson": "Basil Valdez",
      "id": "1",
      "supplierName": "Juan Dela Cruz",
      "supplierNo": "001",
      "tin": "12345",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
